--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
     box-sizing: inherit;
 }
 
+*, *:focus, *:hover, *:active {
+    outline: none;
+}
+
 :root {
     --color-primary: #8500AF;
     --color-secondary: #2A3DAF;
@@ -118,6 +122,12 @@ body {
     background-color: rgb(247, 247, 247);
 }
 
+.input-focused {
+    border-bottom-color: var(--color-secondary);
+    color: var(--color-secondary);
+    background-color: rgb(247, 247, 247);
+}
+
 .input:focus + .label {
     transform: translateY(-3.4rem);
     opacity: 1;
@@ -132,7 +142,13 @@ body {
     transition: all .15s;
     color: var(--color-secondary);
     opacity: 0;
-    visibility: hidden;
+    pointer-events: none;
+}
+
+.label-focused {
+    transform: translateY(-3.4rem);
+    opacity: 1;
+    pointer-events: initial;
 }
 
 span.output {
