--- a/style.css
+++ b/style.css
@@ -158,13 +158,13 @@ input[type=number] {
 }
 
 .content-left {
-    flex: 50%;
+    flex: 0 0 50%;
     align-self: stretch;
     position: relative;
 }
 
 .content-right {
-    flex: 50%;
+    flex: 0 0 50%;
     align-self: stretch;
     position: relative;
 }
@@ -295,7 +295,7 @@ span.output > span {
     display: block;
     position: relative;
     top: 10rem;
-    width: 100%;
+    max-width: 100%;
     height: 100%;
 }
 
@@ -349,7 +349,7 @@ span.output > span {
 }
 
 .icon:hover {
-    fill: var(--color-secondary);
+    fill: var(--color-primary);
 }
 
 .icon-output {
@@ -455,7 +455,10 @@ figure {
     height: 25rem;
     width: 25rem;
     overflow: hidden;
-    border-radius: 300px;
+    float: left;
+    -webkit-shape-outside: circle(50% at 50% 50%);
+    shape-outside: circle(50% at 50% 50%);
+    clip-path: circle(50% at 50% 50%);
     position: relative;
 }
 
