--- a/includes/languages/index_en.html
+++ b/includes/languages/index_en.html
@@ -16,7 +16,7 @@
         <div class="selection">
             <span class="selection-element" id="selection1">BIN</span>
             <span class="selection-element" id="selection2">OCT</span>
-            <span class="selection-element" id="selection3">DEX</span>
+            <span class="selection-element" id="selection3">DEC</span>
             <span class="selection-element" id="selection4">HEX</span>
         </div>
         <div class="input-group" id="group1">
@@ -38,8 +38,8 @@
                     <span id="outputOct">Enter a number</span>
                 </span>
             <span class="output">
-                    <small class="output-label">Decimal (DEX)</small>
-                    <span id="outputDex">Enter a number</span>
+                    <small class="output-label">Decimal (DEC)</small>
+                    <span id="outputDec">Enter a number</span>
                 </span>
             <span class="output">
                     <small class="output-label">Hexadecimal (HEX)</small>
