--- a/includes/languages/index_pl.html
+++ b/includes/languages/index_pl.html
@@ -1,19 +1,19 @@
 <main>
 <div class="visitor-alert visitor-alert--hidden" id="modal">
     <div class="visitor-alert__content">
-        <h4 class="visitor-alert__heading">Drogi użytkowniku!</h4>
-        <p class="visitor-alert__paragraph">Projekt nie jest jeszcze ukończony i nie funkcjonuje prawidłowo. Obecny status prac można zobaczyć na GitHubie.</p>
-        <p class="visitor-alert__paragraph">Repozytorium: <a href="https://github.com/Forcowicz/Konwerter-systemow-liczbowych">Kliknij, aby przejść na stronę GitHub.</a></p>
+        <h4 class="visitor-alert__heading">Drogi użytkowniku</h4>
+        <p class="visitor-alert__paragraph">Projekt nie został jeszcze ukończony. Obecny status prac można zobaczyć na GitHub.</p>
+        <p class="visitor-alert__paragraph">Repozytorium: <a href="https://github.com/Forcowicz/Konwerter-systemow-liczbowych">Kliknij tutaj, aby przejść do GitHub.</a></p>
         <button class="btn" id="modalBtn">Rozumiem</button>
     </div>
 </div>
 <script src="includes/js/alert.js"></script>
 <section class="content">
-    <div class="heading">
-        <h1>Konwerter systemów liczbowych</h1>
+    <div class="content__heading-box">
+        <h1 class="content__heading">Konwerter systemów liczbowych</h1>
     </div>
-    <div class="row">
-        <div class="col-1-of-2">
+    <div class="content__main">
+        <div class="content__left">
             <div class="selection">
                 <span class="selection__element" id="selection1">BIN</span>
                 <span class="selection__element" id="selection2">OCT</span>
@@ -21,36 +21,35 @@
                 <span class="selection__element" id="selection4">HEX</span>
             </div>
             <div class="input__group" id="group1">
-                <input type="text" placeholder="Wybierz system" class="input" id="input">
-                <label for="input" class="input__label" id="inputLabel">Wpisz liczbę w systemie dwójkowym</label>
+                <input type="text" placeholder="Select a system" class="input" id="input">
+                <label for="input" class="input__label" id="inputLabel">Wpisz liczbę w systemie binarnym</label>
             </div>
             <div class="system-alert" id="system-alert">
                 <h5>Wybierz system</h5>
             </div>
         </div>
-        <div class="col-1-of-2">
+        <div class="content__right">
             <div class="output__group">
                 <span class="output">
                     <small class="output__label">Dwójkowy (BIN)</small>
-                    <span id="outputBin">Wpisz liczbę</span>
+                    <span class="output__result" id="outputBin">Wpisz liczbę</span>
                 </span>
                 <span class="output">
-                        <small class="output__label">Ósemkowy (OCT)</small>
-                        <span id="outputOct">Wpisz liczbę</span>
-                    </span>
+                    <small class="output__label">Ósemkowy (OCT)</small>
+                    <span class="output__result" id="outputOct">Wpisz liczbę</span>
+                </span>
                 <span class="output">
-                        <small class="output__label">Dziesiętny (DEC)</small>
-                        <span id="outputDec">Wpisz liczbę</span>
-                    </span>
+                    <small class="output__label">Dziesiętny (DEC)</small>
+                    <span class="output__result" id="outputDec">Wpisz liczbę</span>
+                </span>
                 <span class="output">
-                        <small class="output__label">Szesnastkowy (HEX)</small>
-                        <span id="outputHex">Wpisz liczbę</span>
-                    </span>
+                    <small class="output__label">Szesnastkowy (HEX)</small>
+                    <span class="output__result" id="outputHex">Wpisz liczbę</span>
+                </span>
             </div>
         </div>
     </div>
 </section>
-</main>
 <footer class="footer">
     <button class="footer__link" id="creditsBtnOpen">Credits</button>
     <button class="footer__link" id="languagesBtnOpen">Lang</button>
@@ -72,5 +71,6 @@
         <p class="credits__icon-author">Ikony stworzone przez <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> dla <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></p>
     </div>
 </section>
+</main>
 <script src="includes/js/modal.js"></script>
-<script src="includes/js/languages/polish/converter_pl.js"></script>
+<script src="includes/js/languages/english/converter_en.js"></script>
