--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -17,13 +17,9 @@ html {
     margin: 0;
     padding: 0;
     font-size: 62.5%;
-    //height: 100%;
+    height: 100vh;
+    width: 100vw; 
     box-sizing: border-box;
-    // scroll-behavior: smooth;
-    // background-image: linear-gradient(to right bottom, var(--color-primary), var(--color-secondary));
-    // background-size: cover;
-    // background-repeat: no-repeat;
-    // background-position: center;
 
     @include respond(tab-land) {
         font-size: 56.25%;
@@ -44,22 +40,13 @@ html {
 
 body {
     font-family: "Poppins", sans-serif;
-    height: 100vh; 
     margin: 0;
+    width: 100%;
+    height: 100%;
     scroll-behavior: smooth;
-    background-image: linear-gradient(to right bottom, var(--color-primary), var(--color-secondary));
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 100%;
     font-weight: 400;
     line-height: 1.6;
     color: #000;
-    max-width: 100vw;
-    max-height: 100vh;
-
-    @include respond(phone) {
-        background-size: 500%;
-    }
 }
 
 input::-webkit-outer-spin-button, // Input type=number reset
