--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -27,6 +27,12 @@
             border-bottom: 3px solid red;
             padding: 2rem;
             text-align: center;
+
+            @include respond(phone) {
+                top: 50%;
+                transform: translate(-50%, -50%);
+                width: 80%;
+            }
         }
 
         &__heading {
@@ -46,12 +52,8 @@
     display: block;
     width: 100%;
     text-align: center;
-    position: absolute;
-    top: 60%;
-    left: 50%;
-    transform: translate(-50%, -60%);
-    margin: 0 auto;
     transition: all .15s;
+    margin-top: 2rem;
 
         &--hidden {
             visibility: hidden;
@@ -62,17 +64,18 @@
 .output {
     position: relative;
     width: 31.5rem;
+    height: auto;
     display: block;
-    padding: 1rem;
-    background-color: rgb(240, 240, 240);
-    border-radius: 10px;
-    font-size: 1.6rem;
+
+    @include respond(phone) {
+        width: 100%;
+    }
 
         &:not(:first-child) {
-            margin-top: 4rem;
+            margin-top: 2rem;
         }
 
-        & > span {
+        &__result {
             font-family: 'Rubik', sans-serif;
             color: var(--color-primary);
             letter-spacing: 2px;
@@ -80,22 +83,36 @@
             height: 100%;
             display: block;
             overflow: hidden;
+            padding: 1rem;
+            background-color: rgb(240, 240, 240);
+            border-radius: 10px;
+            font-size: 1.6rem;
+
+            @include respond(phone) {
+                font-size: 2rem;
+            }
         }
 
         &__group {
             display: block;
             position: relative;
-            top: 10rem;
             max-width: 100%;
             height: 100%;
+
+            @include respond(phone) {
+                width: 100%;
+            }
         }
 
         &__label {
-            position: absolute;
-            top: -2.25rem;
-            left: 1rem;
+            position: relative;
+            bottom: .3rem;
             font-size: 1.3rem;
             font-family: "Work Sans", sans-serif;
             color: var(--color-secondary);
+
+            @include respond(phone) {
+                font-size: 1.6rem;
+            }
         }
 }
