--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -14,6 +14,10 @@ h4 {
     color: inherit;
     display: inline-block;
     margin: 0;
+
+    @include respond(phone) {
+        font-size: 2rem;
+    }
 }
 
 h5 {
@@ -22,15 +26,8 @@ h5 {
     text-transform: uppercase;
     color: var(--color-grey);
     font-size: 2.4rem;
-}
 
-.heading h1 {
-    font-size: 2.8rem;
-    margin: 0;
-    text-transform: uppercase;
-    background-image: linear-gradient(to right bottom, var(--color-primary), var(--color-secondary));
-    background-clip: text;
-    color: transparent;
-    text-shadow: 0 .5rem 1rem rgba(var(--color-black), .25);
-    -webkit-background-clip: text;
+    @include respond(phone) {
+        font-size: 3.2rem;
+    }
 }
