--- a/style.css
+++ b/style.css
@@ -29,6 +29,8 @@ html {
   margin: 0;
   padding: 0;
   font-size: 62.5%;
+  height: 100vh;
+  width: 100vw;
   box-sizing: border-box; }
   @media only screen and (max-width: 75em) {
     html {
@@ -45,21 +47,13 @@ html {
 
 body {
   font-family: "Poppins", sans-serif;
-  height: 100vh;
   margin: 0;
+  width: 100%;
+  height: 100%;
   scroll-behavior: smooth;
-  background-image: linear-gradient(to right bottom, var(--color-primary), var(--color-secondary));
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 100%;
   font-weight: 400;
   line-height: 1.6;
-  color: #000;
-  max-width: 100vw;
-  max-height: 100vh; }
-  @media only screen and (max-width: 38.75em) {
-    body {
-      background-size: 500%; } }
+  color: #000; }
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
@@ -105,9 +99,20 @@ input[type=number] {
   .row .col-3-of-4 {
     width: calc(3 * ((100% - 3 * 6rem) / 4) + 2 * (6rem)); }
 
+main {
+  height: 100%;
+  width: 100%;
+  position: relative;
+  background-image: linear-gradient(to right bottom, var(--color-primary), var(--color-secondary));
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100%; }
+  @media only screen and (max-width: 38.75em) {
+    main {
+      height: 110%; } }
+
 .content {
   width: 75rem;
-  height: 50rem;
   background-color: #fff;
   position: absolute;
   top: 50%;
@@ -116,26 +121,53 @@ input[type=number] {
   border-radius: 12px;
   overflow: hidden;
   box-shadow: 0 1rem 1.5rem rgba(var(--color-black), 0.25);
-  padding: 2rem;
-  display: flex; }
+  padding: 3rem 2rem;
+  display: flex;
+  flex-direction: column; }
   @media only screen and (max-width: 38.75em) {
     .content {
-      width: 100%;
-      height: auto;
-      flex-direction: column; } }
-
-.heading {
-  text-align: center;
-  display: block;
-  margin-bottom: 2rem;
-  width: 80%;
-  position: absolute;
-  top: 5%;
-  left: 50%;
-  transform: translate(-50%, -5%); }
-  @media only screen and (max-width: 38.75em) {
-    .heading {
-      margin-bottom: 3rem; } }
+      width: 100vw;
+      border-radius: 0; } }
+  .content__heading-box {
+    display: block;
+    text-align: center;
+    margin-bottom: 3rem; }
+  .content__heading {
+    font-size: 2.8rem;
+    margin: 0;
+    text-transform: uppercase;
+    background-image: linear-gradient(to right bottom, var(--color-primary), var(--color-secondary));
+    background-clip: text;
+    color: transparent;
+    text-shadow: 0 0.5rem 1rem rgba(var(--color-black), 0.25);
+    -webkit-background-clip: text; }
+    @media only screen and (max-width: 38.75em) {
+      .content__heading {
+        font-size: 3.2rem; } }
+  .content__main {
+    display: flex;
+    justify-content: center;
+    height: 100%; }
+    @media only screen and (max-width: 38.75em) {
+      .content__main {
+        flex-direction: column; } }
+  .content__left {
+    display: flex;
+    align-self: stretch;
+    flex: 0 0 50%;
+    margin-right: 3rem;
+    flex-direction: column;
+    align-items: center; }
+    @media only screen and (max-width: 38.75em) {
+      .content__left {
+        margin: 0; } }
+  .content__right {
+    display: flex;
+    align-self: stretch;
+    flex: 1 0;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center; }
 
 .footer {
   width: 100%;
@@ -147,6 +179,9 @@ input[type=number] {
   bottom: 0;
   left: 0;
   padding: 1rem 2rem; }
+  @media only screen and (max-width: 38.75em) {
+    .footer {
+      justify-content: center; } }
   .footer__link, .footer__link:link, .footer__link:visited {
     text-decoration: none;
     background-color: unset;
@@ -176,6 +211,14 @@ input[type=number] {
     visibility: hidden;
     opacity: 0;
     transition: all .15s; }
+    @media only screen and (max-width: 38.75em) {
+      .footer__languages {
+        left: 50%;
+        bottom: 50%;
+        transform: translate(-50%, -50%);
+        box-shadow: 0 1rem 1.5rem rgba(var(--color-black), 0.4);
+        background-image: unset;
+        background-color: white; } }
     .footer__languages--visible {
       visibility: visible;
       opacity: 1; }
@@ -185,10 +228,16 @@ input[type=number] {
       padding: 0;
       margin: 0 0 2rem 0;
       transition: all .15s; }
+      @media only screen and (max-width: 38.75em) {
+        .footer__languages__list {
+          margin: 0; } }
     .footer__languages__item {
       font-size: 1.6rem;
       cursor: pointer;
       text-align: center; }
+      @media only screen and (max-width: 38.75em) {
+        .footer__languages__item {
+          font-size: 3rem; } }
       .footer__languages__item:hover {
         background-color: lightgrey; }
     .footer__languages__link, .footer__languages__link:link, .footer__languages__link:visited {
@@ -196,6 +245,9 @@ input[type=number] {
       display: block;
       color: var(--color-grey);
       padding: 1rem 4rem; }
+      @media only screen and (max-width: 38.75em) {
+        .footer__languages__link, .footer__languages__link:link, .footer__languages__link:visited {
+          padding: 2.4rem 10rem; } }
 
 a, a:link, a:visited {
   text-decoration: none;
@@ -210,6 +262,9 @@ h4 {
   color: inherit;
   display: inline-block;
   margin: 0; }
+  @media only screen and (max-width: 38.75em) {
+    h4 {
+      font-size: 2rem; } }
 
 h5 {
   margin: 0;
@@ -217,16 +272,9 @@ h5 {
   text-transform: uppercase;
   color: var(--color-grey);
   font-size: 2.4rem; }
-
-.heading h1 {
-  font-size: 2.8rem;
-  margin: 0;
-  text-transform: uppercase;
-  background-image: linear-gradient(to right bottom, var(--color-primary), var(--color-secondary));
-  background-clip: text;
-  color: transparent;
-  text-shadow: 0 0.5rem 1rem rgba(var(--color-black), 0.25);
-  -webkit-background-clip: text; }
+  @media only screen and (max-width: 38.75em) {
+    h5 {
+      font-size: 3.2rem; } }
 
 .visitor-alert {
   position: absolute;
@@ -254,6 +302,11 @@ h5 {
     border-bottom: 3px solid red;
     padding: 2rem;
     text-align: center; }
+    @media only screen and (max-width: 38.75em) {
+      .visitor-alert__content {
+        top: 50%;
+        transform: translate(-50%, -50%);
+        width: 80%; } }
   .visitor-alert__heading {
     font-size: 2.4rem;
     display: inline-block;
@@ -267,12 +320,8 @@ h5 {
   display: block;
   width: 100%;
   text-align: center;
-  position: absolute;
-  top: 60%;
-  left: 50%;
-  transform: translate(-50%, -60%);
-  margin: 0 auto;
-  transition: all .15s; }
+  transition: all .15s;
+  margin-top: 2rem; }
   .system-alert--hidden {
     visibility: hidden;
     opacity: 0; }
@@ -280,34 +329,45 @@ h5 {
 .output {
   position: relative;
   width: 31.5rem;
-  display: block;
-  padding: 1rem;
-  background-color: #f0f0f0;
-  border-radius: 10px;
-  font-size: 1.6rem; }
+  height: auto;
+  display: block; }
+  @media only screen and (max-width: 38.75em) {
+    .output {
+      width: 100%; } }
   .output:not(:first-child) {
-    margin-top: 4rem; }
-  .output > span {
+    margin-top: 2rem; }
+  .output__result {
     font-family: 'Rubik', sans-serif;
     color: var(--color-primary);
     letter-spacing: 2px;
     width: 100%;
     height: 100%;
     display: block;
-    overflow: hidden; }
+    overflow: hidden;
+    padding: 1rem;
+    background-color: #f0f0f0;
+    border-radius: 10px;
+    font-size: 1.6rem; }
+    @media only screen and (max-width: 38.75em) {
+      .output__result {
+        font-size: 2rem; } }
   .output__group {
     display: block;
     position: relative;
-    top: 10rem;
     max-width: 100%;
     height: 100%; }
+    @media only screen and (max-width: 38.75em) {
+      .output__group {
+        width: 100%; } }
   .output__label {
-    position: absolute;
-    top: -2.25rem;
-    left: 1rem;
+    position: relative;
+    bottom: .3rem;
     font-size: 1.3rem;
     font-family: "Work Sans", sans-serif;
     color: var(--color-secondary); }
+    @media only screen and (max-width: 38.75em) {
+      .output__label {
+        font-size: 1.6rem; } }
 
 .input {
   border-bottom: 3px solid var(--color-primary);
@@ -321,6 +381,9 @@ h5 {
   font-family: inherit;
   font-size: 1.5rem;
   color: var(--color-primary); }
+  @media only screen and (max-width: 38.75em) {
+    .input {
+      font-size: 2rem; } }
   .input::placeholder {
     color: var(--color-primary);
     font-size: inherit;
@@ -364,6 +427,9 @@ h5 {
     color: var(--color-secondary);
     opacity: 0;
     pointer-events: none; }
+    @media only screen and (max-width: 38.75em) {
+      .input__label {
+        font-size: 1.2rem; } }
     .input__label--focused {
       transform: translateY(-3.4rem);
       opacity: 1;
@@ -373,11 +439,11 @@ h5 {
   .input__group {
     margin-bottom: 1.5rem;
     position: relative;
-    width: 30rem; }
-
-#group1 {
-  top: 10rem;
-  margin: 3rem auto 0 auto; }
+    width: 30rem;
+    margin-top: 4rem; }
+    @media only screen and (max-width: 38.75em) {
+      .input__group {
+        width: 100%; } }
 
 .btn {
   border: none;
@@ -396,10 +462,12 @@ h5 {
 .selection {
   width: 100%;
   position: relative;
-  top: 8rem;
   display: flex;
   justify-content: space-evenly;
   align-items: center; }
+  @media only screen and (max-width: 38.75em) {
+    .selection {
+      flex-direction: column; } }
   .selection__element {
     display: inline-block;
     background-color: var(--color-grey);
@@ -413,6 +481,14 @@ h5 {
     backface-visibility: hidden;
     box-shadow: 0 0.5rem 1rem rgba(var(--color-black), 0.25);
     transition: all .15s; }
+    @media only screen and (max-width: 38.75em) {
+      .selection__element {
+        display: block;
+        width: 100%;
+        padding: 1rem;
+        font-size: 1.8rem; }
+        .selection__element:not(:first-child) {
+          margin-top: 1.5rem; } }
     .selection__element:hover {
       transform: scale(1.15); }
     .selection__element--active {
