Added bits counter

--- a/includes/languages/index_en.html
+++ b/includes/languages/index_en.html
@@ -27,6 +27,10 @@
             <div class="system-alert" id="system-alert">
                 <h5>Select a system</h5>
             </div>
+            <div class="bits">
+                <span class="bits__number" id="bitsNumber">0</span>
+                <small class="bits__info" id="bitsInfo">bitów</small>
+            </div>
         </div>
         <div class="content__right">
             <div class="output__group">
