--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -7,7 +7,7 @@
 }
 
 :root {
-    --color-primary: #8500AF;
+    --color-primary: #8500af;
     --color-secondary: #2A3DAF;
     --color-black: 000, 000, 000;
     --color-grey: rgb(77, 76, 76);
