--- a/style.css
+++ b/style.css
@@ -608,6 +608,12 @@ h5 {
   align-items: center;
   position: absolute;
   bottom: 0; }
+  @media only screen and (max-width: 38.75em) {
+    .bits {
+      position: relative;
+      align-self: flex-end;
+      right: 50%;
+      transform: translateX(50%); } }
   .bits > * {
     font-weight: inherit;
     line-height: initial;
