--- a/includes/languages/index_pl.html
+++ b/includes/languages/index_pl.html
@@ -21,7 +21,7 @@
                 <span class="selection__element" id="selection4">HEX</span>
             </div>
             <div class="input__group" id="group1">
-                <input type="text" placeholder="Select a system" class="input" id="input">
+                <input type="text" placeholder="Wybierz system" class="input" id="input">
                 <label for="input" class="input__label" id="inputLabel">Wpisz liczbę w systemie binarnym</label>
             </div>
             <div class="system-alert" id="system-alert">
