Cookies policy popup, removed WIP info

--- a/includes/languages/index_en.html
+++ b/includes/languages/index_en.html
@@ -1,12 +1,8 @@
-<main>
-<div class="visitor-alert visitor-alert--hidden" id="modal">
-    <div class="visitor-alert__content">
-        <h4 class="visitor-alert__heading">Dear user!</h4>
-        <p class="visitor-alert__paragraph">Project is not completed yet and doesn't work properly. Current work status can be checked on GitHub.</p>
-        <p class="visitor-alert__paragraph">Repository: <a href="https://github.com/Forcowicz/Konwerter-systemow-liczbowych">Click here to open GitHub.</a></p>
-        <button class="btn" id="modalBtn">I understand</button>
-    </div>
+<div class="cookieInfo cookieInfo--hidden" id="modal">
+    <span class="cookieInfo__paragraph">This website uses cookies and other similar technologies for statistics and better user performance.</span>
+    <button class="cookieInfo__button" id="modalBtn">I Agree</button>
 </div>
+<main>
 <script src="includes/js/alert.js"></script>
 <section class="content">
     <div class="content__heading-box">
