--- a/includes/languages/index_pl.html
+++ b/includes/languages/index_pl.html
@@ -1,12 +1,8 @@
-<main>
-<div class="visitor-alert visitor-alert--hidden" id="modal">
-    <div class="visitor-alert__content">
-        <h4 class="visitor-alert__heading">Drogi użytkowniku</h4>
-        <p class="visitor-alert__paragraph">Projekt nie został jeszcze ukończony. Obecny status prac można zobaczyć na GitHub.</p>
-        <p class="visitor-alert__paragraph">Repozytorium: <a href="https://github.com/Forcowicz/Konwerter-systemow-liczbowych">Kliknij tutaj, aby przejść do GitHub.</a></p>
-        <button class="btn" id="modalBtn">Rozumiem</button>
-    </div>
+<div class="cookieInfo cookieInfo--hidden" id="modal">
+    <span class="cookieInfo__paragraph">Ta strona używa plików cookies oraz podobnych technologii w celach statystycznych oraz ułatwienia dostępu.</span>
+    <button class="cookieInfo__button" id="modalBtn">Rozumiem</button>
 </div>
+<main>
 <script src="includes/js/alert.js"></script>
 <section class="content">
     <div class="content__heading-box">
