--- a/style.css
+++ b/style.css
@@ -65,6 +65,17 @@ input[type=number] {
   -moz-appearance: textfield;
   appearance: none; }
 
+@keyframes zoomInOut {
+  0% {
+    transform: scale(1) translate(-50%, -10%);
+    transform-origin: left; }
+  60% {
+    transform: scale(1.15) translate(-50%, -10%);
+    transform-origin: left; }
+  100% {
+    transform: scale(0) translate(-50%, -10%);
+    transform-origin: left; } }
+
 .row {
   max-width: 114rem;
   margin: 0 auto; }
@@ -109,7 +120,7 @@ main {
   background-size: 100%; }
   @media only screen and (max-width: 38.75em) {
     main {
-      height: 110%; } }
+      height: 120%; } }
 
 .content {
   width: 75rem;
@@ -625,3 +636,54 @@ h5 {
     font-size: 1.4rem;
     text-transform: uppercase;
     display: inline-block; }
+
+.cookieInfo {
+  position: absolute;
+  left: 50%;
+  bottom: 10%;
+  transform: translate(-50%, -10%);
+  width: 50%;
+  height: 10rem;
+  background-color: #fff;
+  z-index: 10;
+  overflow: hidden;
+  box-shadow: 0 0 5rem rgba(133, 0, 175, 0.5);
+  display: flex;
+  text-align: center; }
+  @media only screen and (max-width: 38.75em) {
+    .cookieInfo {
+      width: 90%;
+      height: 15%; } }
+  .cookieInfo__paragraph {
+    margin: 0;
+    font-size: 1.8rem;
+    color: var(--color-primary);
+    flex: 1 0;
+    padding: 1rem;
+    hyphens: auto;
+    display: flex;
+    align-items: center; }
+  .cookieInfo__button {
+    display: block;
+    padding: 1rem 2rem;
+    border: none;
+    outline: none;
+    background-image: linear-gradient(to right, var(--color-primary), #720096);
+    color: #fff;
+    font-size: 1.8rem;
+    font-weight: 700;
+    cursor: pointer;
+    transition: all .15s;
+    background-size: 150%;
+    background-position-x: right;
+    height: 100%;
+    flex: 0 0 18%; }
+    .cookieInfo__button:hover {
+      background-position-x: left; }
+  .cookieInfo--hidden {
+    visibility: hidden;
+    opacity: 0;
+    animation-name: zoomInOut;
+    animation-duration: 1s; }
+  .cookieInfo--animation {
+    animation: zoomInOut .8s ease-in-out; }
