--- a/includes/languages/index_en.html
+++ b/includes/languages/index_en.html
@@ -25,7 +25,7 @@
             </div>
             <div class="bits">
                 <span class="bits__number" id="bitsNumber">0</span>
-                <small class="bits__info" id="bitsInfo">bitów</small>
+                <small class="bits__info" id="bitsInfo">bits</small>
             </div>
         </div>
         <div class="content__right">
