--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -20,11 +20,11 @@ main {
   left: 50%;
   transform: translate(-50%, -50%);
   border-radius: 12px;
-  overflow: hidden;
   box-shadow: 0 1rem 1.5rem rgba(var(--color-black), .25);
   padding: 3rem 2rem;
   display: flex;
   flex-direction: column;
+  z-index: 0;
 
   @include respond(phone) {
     width: 100vw;
@@ -53,9 +53,11 @@ main {
     }
 
     &__main {
+      position: relative;
       display: flex;
       justify-content: center;
       height: 100%;
+      z-index: 4;
 
       @include respond(phone) {
         flex-direction: column;
