--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ $breakpoint argument choices:
 
 :root {
   --color-primary: #8500af;
-  --color-secondary: #2A3DAF;
+  --color-secondary: #2a3daf;
   --color-black: 000, 000, 000;
   --color-grey: rgb(77, 76, 76); }
 
@@ -70,7 +70,7 @@ input[type=number] {
     transform: scale(1) translate(-50%, -10%);
     transform-origin: left; }
   75% {
-    transform: scale(1.25) translate(-50%, -10%);
+    transform: scale(1.15) translate(-50%, -10%);
     transform-origin: left; }
   100% {
     transform: scale(0) translate(-50%, -10%);
@@ -130,11 +130,11 @@ main {
   left: 50%;
   transform: translate(-50%, -50%);
   border-radius: 12px;
-  overflow: hidden;
   box-shadow: 0 1rem 1.5rem rgba(var(--color-black), 0.25);
   padding: 3rem 2rem;
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+  z-index: 0; }
   @media only screen and (max-width: 38.75em) {
     .content {
       width: 100vw;
@@ -156,9 +156,11 @@ main {
       .content__heading {
         font-size: 3.2rem; } }
   .content__main {
+    position: relative;
     display: flex;
     justify-content: center;
-    height: 100%; }
+    height: 100%;
+    z-index: 4; }
     @media only screen and (max-width: 38.75em) {
       .content__main {
         flex-direction: column; } }
@@ -687,3 +689,87 @@ h5 {
     animation-duration: 1s; }
   .cookieInfo--animation {
     animation: zoomInOut .8s ease-in-out; }
+
+.help {
+  position: absolute;
+  width: 100%;
+  height: 101%;
+  background-color: #fff;
+  transform: translateY(-1px);
+  z-index: 1;
+  padding: 2rem;
+  transition: all .15s; }
+  @media only screen and (max-width: 38.75em) {
+    .help {
+      width: 105%;
+      transform: translateX(-5px);
+      padding: 0; } }
+  .help--hidden {
+    visibility: hidden;
+    opacity: 0; }
+  .help__button {
+    position: absolute;
+    padding: 1rem;
+    left: .5rem;
+    bottom: .5rem;
+    border-radius: 50%;
+    height: auto;
+    width: auto;
+    z-index: 5;
+    cursor: pointer;
+    transition: all .15s;
+    backface-visibility: hidden; }
+    .help__button:hover {
+      transform: scale(1.15); }
+    .help__button--active {
+      transform: scale(1.15); }
+    @media only screen and (max-width: 38.75em) {
+      .help__button {
+        padding: 0; } }
+  .help__icon {
+    fill: var(--color-grey);
+    display: block;
+    width: 2.5rem;
+    height: 2.5rem;
+    transition: all .15s; }
+    .help__icon--active {
+      fill: var(--color-primary); }
+  .help__button:hover > .help__icon {
+    fill: var(--color-primary); }
+  .help__content {
+    width: 100%;
+    height: 100%;
+    display: block; }
+  .help__heading {
+    display: block;
+    text-align: center;
+    margin: 0 0 2rem 0;
+    text-transform: uppercase;
+    font-size: 2.8rem;
+    background-image: linear-gradient(to right, var(--color-primary), var(--color-secondary));
+    color: transparent;
+    background-clip: text;
+    -webkit-background-clip: text;
+    text-shadow: 0 0.5rem 1rem rgba(var(--color-black), 0.25); }
+    @media only screen and (max-width: 38.75em) {
+      .help__heading {
+        font-size: 3.1rem; } }
+  .help__paragraph {
+    font-size: 1.6rem;
+    text-align: center; }
+    @media only screen and (max-width: 38.75em) {
+      .help__paragraph {
+        font-size: 1.8rem; } }
+  .help__list-container {
+    display: block;
+    position: relative; }
+  .help__list {
+    position: relative;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%);
+    display: inline-block;
+    font-size: 1.6rem; }
+    @media only screen and (max-width: 38.75em) {
+      .help__list {
+        font-size: 1.8rem; } }
